--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
     "bip39": "^2.5.0",
     "core-js": "^2.4.1",
     "crypto-js": "^3.1.9-1",
+    "decimal.js": "^10.1.1",
     "ethereumjs-tx": "^1.3.7",
     "ethereumjs-util": "^6.1.0",
     "ethereumjs-wallet": "^0.6.3",
     "express": "^4.15.2",
+    "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "6.3.3",
     "rxjs-compat": "^6.4.0",
